# cudasync

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: main.yaml
scripts/: 01_data.py  02_benchmark_resize.py  03_benchmark_resize_threads.py  04_benchmark_resnet.py  05_benchmark_resnet_transfer.py  05_benchmark_resnet_transfer_blocking.py  06_benchmark_resnet_transfer_async.py  07_benchmark_resnet_transfer_async_streams.py  08_benchmark_resnet_transfer_async_optim.py
